# optional

./: .gitignore  ANALYSIS.md  BENCHMARK_RESULTS.md  CMakeLists.txt  LICENSE  Makefile  README.md  SUMMARY.md  UPDATES.md  VERIFICATION.md  examples  memory_bench  perf_bench  proposal.md  tests
benchmarks/: CMakeLists.txt  memory_usage.cpp  performance.cpp
examples/: CMakeLists.txt  examples.cpp
include/slim/: optional.hpp
reference-impl/: examples.cpp  optional.hpp  tests.cpp
supplementary/: abi_analysis.md  migration_guide.md
tests/: CMakeLists.txt  tests.cpp
